--- a/src/app/modules/dailog/student-status/student-status.component.html
+++ b/src/app/modules/dailog/student-status/student-status.component.html
@@ -2,7 +2,7 @@
     <span class="align-middle">Student Status</span>
 </h2>
 <mat-dialog-content class="student-status">
-    <app-payment-status (sendData)="submitData($event)" [data]="data"></app-payment-status>
+    <app-payment-status (sendData)="submitData($event)" [isOffline]="!!data.isOffline" [data]="data"></app-payment-status>
 </mat-dialog-content>
 <div mat-dialog-actions>
     <hr />
