--- a/src/app/shared/forgot-password/forgot-password.component.html
+++ b/src/app/shared/forgot-password/forgot-password.component.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="login-content">
             <div *ngIf="mailSend">
-                <b class="title">New Password successfuly send to your mail!</b>
+                <b class="title">Reset Password has been sent to your email successfully</b>
                 <br/>
                 <br/>
                 <div  class="link">
