--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 
 // regular style toast
 @import '~ngx-toastr/toastr';
+@import '~saturn-datepicker/bundle.css';
 
 .mat-elevation-z8 {
     box-shadow: none !important;
