--- a/src/app/modules/Organize/assign/scholarship/scholarship.component.html
+++ b/src/app/modules/Organize/assign/scholarship/scholarship.component.html
@@ -38,6 +38,11 @@
                         <td mat-cell *matCellDef="let element"> {{element.studentName}} </td>
                     </ng-container>
 
+                    <ng-container matColumnDef="rollNo">
+                        <th mat-header-cell *matHeaderCellDef> Roll No </th>
+                        <td mat-cell *matCellDef="let element"> {{element.rollNo}} </td>
+                    </ng-container>
+
                     <ng-container matColumnDef="scholarshipName">
                         <th mat-header-cell *matHeaderCellDef> Scholarship Name </th>
                         <td mat-cell *matCellDef="let element"> {{element.scholarshipName}} </td>
