--- a/src/app/modules/active-fee/active-fee.component.html
+++ b/src/app/modules/active-fee/active-fee.component.html
@@ -12,7 +12,7 @@
     <div class="row">
         <mat-card class="content_box">
             <h5  class="float-left">Fee Status</h5>
-            <button class="float-right" routerLink="/active-fee/add" mat-raised-button color="primary"> Active Fee</button>
+            <button class="float-right" routerLink="/active-fee/add" mat-raised-button color="primary"> Activate Fee</button>
             <input class="float-right search-filter" (keyup)="applyFilter($event.target.value)" placeholder="Search.. Ex: name">
             <div class="mat-elevation-z8">
                 <table mat-table [dataSource]="dataSource">
@@ -46,6 +46,11 @@
                     <ng-container matColumnDef="penaltyName">
                         <th mat-header-cell *matHeaderCellDef> Penalty Name </th>
                         <td mat-cell *matCellDef="let element"> {{element.penaltyName}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="typeName">
+                        <th mat-header-cell *matHeaderCellDef> Type Name </th>
+                        <td mat-cell *matCellDef="let element"> {{element.typeName}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="activationDate">
