--- a/src/app/modules/active-fee/add-active-fee/add-active-fee.component.html
+++ b/src/app/modules/active-fee/add-active-fee/add-active-fee.component.html
@@ -2,9 +2,9 @@
 
     <mat-card class="header_card">
         <p style="line-height: 30px;">
-            <span style="float: left;">Active Fee</span> <span style="float: right;"><a routerLink="/dashboard">Home</a>
+            <span style="float: left;">Activate Fee</span> <span style="float: right;"><a routerLink="/dashboard">Home</a>
                 >
-                Active Fee </span>
+                Activate Fee </span>
         </p>
     </mat-card>
 
@@ -12,7 +12,18 @@
     <mat-card class="content_box form-active-fee">
         <form action="" [formGroup]="objectForm">
             <div class="row m-0">
-                <div class="col-md-3 mr-2 ml-3">
+                <div class="col-md-3 mr-2 ml-1" *ngIf="isSUadmin">
+                    <div class="row" style="display: flex;">
+                        <label class="m-0" for="cars">University</label>
+                        <select size="1" formControlName="universityId" required (ngModelChange)='selectUniversity($event)'>
+                            <option value="" selected>Select University</option>
+                            <option *ngFor=' let university of universityList' [value]="university.id">{{university.universityName}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="col-md-3 mr-2 ml-1">
                     <div class="row" style="display: flex;">
                         <label class="m-0" for="cars">School</label>
                         <select size="1" formControlName="schoolId" required (ngModelChange)='selectSchool($event)'>
@@ -35,7 +46,9 @@
                         </select>
                     </div>
                 </div>
+            </div>
 
+            <div class="row m-0 mt-3">
                 <div class="col-md-3 mr-2 ml-1">
                     <div class="row" style="display: flex;">
                         <label class="m-0" for="cars">programme</label>
@@ -47,10 +60,7 @@
                     </div>
                 </div>
 
-            </div>
-
-            <div class="row m-0 mt-3">
-                <div class="col-md-3 mr-2 ml-3">
+                <div class="col-md-3 mr-2 ml-1">
                     <div class="row" style="display: flex;">
                         <label class="m-0" for="cars">Semester</label>
                         <select size="1" formControlName="semesterId" required (ngModelChange)='selectSemester($event)'>
@@ -61,7 +71,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-3 mr-2 ml-1">
+                <div class="col-md-3 mr-2 ml-1" *ngIf="!isNodivision">
                     <div class="row" style="display: flex;">
                         <label class="m-0" class="m-0" for="cars">Division</label>
                         <select size="1" formControlName="divisionId" required (ngModelChange)='selectDivision($event)'>
@@ -101,6 +111,11 @@
                         <td mat-cell *matCellDef="let element"> {{element.feeType}} </td>
                     </ng-container>
 
+                    <ng-container matColumnDef="frequencyStop">
+                        <th mat-header-cell *matHeaderCellDef> Total terms </th>
+                        <td mat-cell *matCellDef="let element"> {{element.frequencyStop}} </td>
+                    </ng-container>
+
                     <ng-container matColumnDef="fee">
                         <th mat-header-cell *matHeaderCellDef> Amount </th>
                         <td mat-cell *matCellDef="let element"> {{element.fee}} </td>
@@ -112,7 +127,7 @@
                             <button type="button" (click)="openActiveFee(element)" [ngClass]="{
                                 'btn-outline-primary': true
                             }" class="btn">
-                                Active
+                            Activate
                             </button>
                         </td>
                     </ng-container>
