--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -13,6 +13,7 @@
         <mat-card class="content_box">
             <h5  class="float-left">Admin</h5>
             <button class="float-right" routerLink="/admin/add" mat-raised-button color="primary"> + Add Admin</button>
+            <button class="float-right mr-2" routerLink="/admin/su-add" *ngIf="isSuperAdmin" mat-raised-button color="accent"> + Add SuperAdmin</button>
             <input class="float-right search-filter" (keyup)="applyFilter($event.target.value)" placeholder="Search.. Ex: name">
             <div class="mat-elevation-z8">
                 <table mat-table [dataSource]="dataSource">
@@ -24,9 +25,9 @@
                     </ng-container>
 
                     <!-- Name Column -->
-                    <ng-container matColumnDef="username">
+                    <ng-container matColumnDef="name">
                         <th mat-header-cell *matHeaderCellDef> User Name </th>
-                        <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+                        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                     </ng-container>
                     <!--  -->
 
