--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -1,26 +1,82 @@
-mat-card{
-    margin: 15px 0;
-    padding: 20px;
+mat-card {
+    margin: 10px 0;
+    // padding: 20px;
     border: 0 solid #e7e7e7;
     border-radius: 5px;
-    box-shadow: 0 5px 20px 0 rgba(0,0,0,0.15);
     width: 100%;
     overflow: hidden;
     height: 100px;
     color: white;
 }
-.card1{
+.card1 {
     background-color: #4680ff !important;
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.15);
 }
-.card2{
-    background-color: #e6a1f2 !important;
+.card2 {
+    background-color: #9c27b0 !important;
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.15);
 }
-.card3{
-    background-color: #26dad2 !important;
+.card3 {
+    background-color: #00bcd4 !important;
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.15);
 }
-.card4{
+.card4 {
     background-color: #fc6180 !important;
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.15);
 }
-p{
-    margin-bottom:  0;
+p {
+    margin-bottom: 0;
+}
+.container {
+    align-items: center;
+}
+.header_card {
+    width: 100%;
+    height: 60px;
+    margin: 10px 0px;
+    box-shadow: 0 0 20px #8c8c8c;
+}
+.content_box {
+    width: 100%;
+    height: 100%;
+    margin: 10px 0px;
+    box-shadow: 0px 16px 20px -9px #8c8c8c;
+}
+
+input {
+    width: 100%;
+}
+select {
+    width: 100%;
+    height: 30px;
+    margin-top: 4px;
+}
+
+table {
+    width: 100%;
+    overflow-y: scroll;
+}
+#chart {
+    max-width: 650px;
+}
+#chart2 {
+    max-width: 650px;
+}
+#chart3 {
+    max-width: 380px;
+    margin: 35px auto;
+    padding: 0;
+}
+
+.charts-title {
+    position: relative;
+    bottom: -10px;
+}
+
+.chart-box {
+    background-color: #fff;
+    margin: 10px 0px;
+    border: 0 solid #e7e7e7;
+    border-radius: 5px;
+    box-shadow: 0px 16px 20px -9px #8c8c8c;
 }
