--- a/src/app/modules/fees/view-fee/view-fee.component.html
+++ b/src/app/modules/fees/view-fee/view-fee.component.html
@@ -40,14 +40,14 @@
                         <td mat-cell *matCellDef="let element"> {{element.programName}} </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="semesterName">
-                        <th mat-header-cell *matHeaderCellDef> Semester </th>
-                        <td mat-cell *matCellDef="let element"> {{element.semesterName}} </td>
+                    <ng-container matColumnDef="feeType">
+                        <th mat-header-cell *matHeaderCellDef> Frequency </th>
+                        <td mat-cell *matCellDef="let element"> {{element.feeType}} </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="divisionName">
-                        <th mat-header-cell *matHeaderCellDef> Division </th>
-                        <td mat-cell *matCellDef="let element"> {{element.divisionName}} </td>
+                    <ng-container matColumnDef="frequencyStop">
+                        <th mat-header-cell *matHeaderCellDef> Total terms </th>
+                        <td mat-cell *matCellDef="let element"> {{element.frequencyStop}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="type">
