--- a/src/app/modules/penalty/add-penalty/add-penalty.component.html
+++ b/src/app/modules/penalty/add-penalty/add-penalty.component.html
@@ -2,56 +2,79 @@
 
     <mat-card class="header_card">
         <p style="line-height: 30px;">
-            <span style="float: left;">Add School</span> <span class="float-right"><a routerLink="/dashboard">Home</a> >
-                Add School </span>
+            <span style="float: left;">Add Penalty</span> <span class="float-right"><a routerLink="/dashboard">Home</a> >
+                Add Penalty </span>
         </p>
     </mat-card>
 
     <mat-card class="content_box">
-        <form action="" [formGroup]="penaltyForm" (submit)="onSubmit()" >
+        <form action="" [formGroup]="penaltyForm" (submit)="onSubmit()">
             <div formArrayName="penalty">
-                <div class="row m-0" *ngFor="let data of penaltyList; let i = index;" [formGroupName]="i">
-                    <div class="col-md-3">
-                        <div class="row mt-2">
-                            <p class="p-0 m-0"> Penalty Name * </p>
-                            <input type="text" required placeholder="Penalty name" formControlName="penaltyName">
+                <div *ngFor="let data of penaltyList; let i = index;" [formGroupName]="i">
+                    <div class="row m-0">
+                        <div class="col-md-3" *ngIf="isSUAdmin">
+                            <div class="row mt-2">
+                                <p class="p-0 m-0"> University * </p>
+                                <select formControlName="universityId" required>
+                                    <option value="" selected>Select university</option>
+                                    <option *ngFor=' let university of universityList' [value]="university.id">
+                                        {{university.universityName}}</option>
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="row mt-2 ml-1">
-                            <p class="p-0 m-0 "> Penalty Amount * </p>
-                            <input type="number" required placeholder="Ex: 10,000" formControlName="penaltyAmount">
+                        <div class="col-md-3">
+                            <div class="row mt-2 ml-1">
+                                <p class="p-0 m-0"> Penalty Name * </p>
+                                <input type="text" required placeholder="Penalty name" formControlName="penaltyName">
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-3 mr-2 ml-1">
-                        <div class="row p-0 m-0 mt-2">
+                        <div class="col-md-3">
+                            <div class="row mt-2 ml-1">
+                                <p class="p-0 m-0 "> Penalty Amount * </p>
+                                <input type="number" required placeholder="Ex: 10,000" formControlName="penaltyAmount">
+                            </div>
+                        </div>
+                        <div class="col-md-3 mr-2 ml-1" *ngIf="!isSUAdmin">
+                            <div class="row p-0 m-0 mt-2">
 
-                            <p class="col-md-12 p-0 m-0" for="cars">Frequency</p>
-                            <select class="w-100" required formControlName="frequency" >
-                                <option value="" selected>Select frequency</option>
-                                <option *ngFor='let type of frequency' [value]="type.name">{{type.name}}</option>
-                            </select>
+                                <p class="col-md-12 p-0 m-0" for="cars">Frequency</p>
+                                <select class="w-100" required formControlName="frequency">
+                                    <option value="" selected>Select frequency</option>
+                                    <option *ngFor='let type of frequency' [value]="type.name">{{type.name}}</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-1" style="margin-top: 25px;" *ngIf="!editFlag">
+                            <button mat-mini-fab color="default" [disabled]="!i" class="shadow-none text-dark"
+                                (click)='onRemove(i)'>
+                                <mat-icon [ngClass]="{'text-light': !i}">remove_circle</mat-icon>
+                            </button>
+                        </div>
+                        <div class="col-md-1" style="margin-top: 25px;" *ngIf="!i && !editFlag">
+                            <button mat-mini-fab color="default" class="shadow-none text-success" (click)='onAdd()'>
+                                <mat-icon>add_circle</mat-icon>
+                            </button>
                         </div>
                     </div>
-                    <div class="col-md-1" style="margin-top: 25px;" *ngIf="!editFlag">
-                        <button mat-mini-fab color="default"  [disabled]="!i" class="shadow-none text-dark" (click)='onRemove(i)'>
-                            <mat-icon [ngClass]="{'text-light': !i}">remove_circle</mat-icon>
-                        </button>
+                    <div class="row mt-2" *ngIf="isSUAdmin">
+                        <div class="col-md-3 mr-2 ml-1">
+                            <div class="row p-0 m-0 mt-2">
+
+                                <p class="col-md-12 p-0 m-0" for="cars">Frequency</p>
+                                <select class="w-100" required formControlName="frequency">
+                                    <option value="" selected>Select frequency</option>
+                                    <option *ngFor='let type of frequency' [value]="type.name">{{type.name}}</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-md-1" style="margin-top: 25px;" *ngIf="!i && !editFlag">
-                        <button mat-mini-fab color="default" class="shadow-none text-success" (click)='onAdd()'>
-                            <mat-icon>add_circle</mat-icon>
-                        </button>
-                    </div>
+                    <hr />
                 </div>
             </div>
 
-
             <div class="row m-0 mt-3">
-                <button mat-raised-button color="primary" class="mr-2" type="submit"
-                    *ngIf='!editFlag'>Save</button>
-                <button mat-raised-button color="primary" class="mr-2" type="submit"
-                    *ngIf='editFlag'>Update</button>
+                <button mat-raised-button color="primary" class="mr-2" type="submit" *ngIf='!editFlag'>Save</button>
+                <button mat-raised-button color="primary" class="mr-2" type="submit" *ngIf='editFlag'>Update</button>
                 <button mat-stroked-button color="warn" class="mr-2" routerLink="/penalty">Cancel</button>
             </div>
         </form>
