--- a/src/app/modules/programme/add-programme/add-programme.component.html
+++ b/src/app/modules/programme/add-programme/add-programme.component.html
@@ -1,68 +1,84 @@
 <div class="container">
 
-  <mat-card class="header_card">
-    <p style="line-height: 30px;">
-      <span style="float: left;">Add Programme</span> <span style="float: right;"><a routerLink="/dashboard">Home</a> >
-        Add Programme </span>
-    </p>
-  </mat-card>
+    <mat-card class="header_card">
+        <p style="line-height: 30px;">
+            <span style="float: left;">Add Programme</span> <span style="float: right;"><a
+                    routerLink="/dashboard">Home</a> >
+                Add Programme </span>
+        </p>
+    </mat-card>
 
 
-  <mat-card class="content_box">
-    <form action="" [formGroup]="objectForm" (submit)="onSubmit()">
-      <div class="row m-0">
-        <div class="col-md-3 mr-2 ml-3">
-          <div class="row" style="display: flex;">
-            <label class="p-0 m-0" for="cars">School</label>
-            <select size="1" formControlName="schoolName" (ngModelChange)='selectSchool($event)' required>
-              <option value="" selected>Select School</option>
-              <option *ngFor=' let school of schoolList' [value]="school.id">{{school.schoolName}}</option>
-            </select>
-          </div>
-        </div>
+    <mat-card class="content_box">
+        <form action="" [formGroup]="objectForm" (submit)="onSubmit()">
+            <div class="row m-0">
+                <div class="col-md-3 mr-2 ml-3" *ngIf="isSUadmin">
+                    <div class="row" style="display: flex;">
+                        <label class="p-0 m-0" for="cars">University</label>
+                        <select size="1" formControlName="universityId" (ngModelChange)="selectUniversity($event)" required>
+                            <option value="" selected>Select University</option>
+                            <option *ngFor=' let university of universityList' [value]="university.id">{{university.universityName}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
 
-        <div class="col-md-3 mr-2 ml-1">
-          <div class="row" style="display: flex;">
-            <label class="p-0 m-0" for="cars">Department</label>
-            <select size="1" formControlName="departmentName" (ngModelChange)='selectDepartment($event)' required>
-              <option value="" selected>Select Department</option>
-              <option *ngFor=' let department of departmentList' [value]="department.id">{{department.departmentName}}
-              </option>
-            </select>
-          </div>
-        </div>
+                <div class="col-md-3 mr-2 ml-3">
+                    <div class="row" style="display: flex;">
+                        <label class="p-0 m-0" for="cars">School</label>
+                        <select size="1" formControlName="schoolName" (ngModelChange)='selectSchool($event)' required>
+                            <option value="" selected>Select School</option>
+                            <option *ngFor=' let school of schoolList' [value]="school.id">{{school.schoolName}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
 
-        <div class="col-md-4" formArrayName="programme">
-          <div class="row" *ngFor="let programme of programmeList;index as i">
-            <div class="col-md-10 p-0 m-0">
-              <label class="p-0 mb-1"> Programme * </label>
-              <input type="text" placeholder="Programme Name" required formControlName="{{i}}">
+                <div class="col-md-3 mr-2 ml-1">
+                    <div class="row" style="display: flex;">
+                        <label class="p-0 m-0" for="cars">Department</label>
+                        <select size="1" formControlName="departmentName" (ngModelChange)='selectDepartment($event)'
+                            required>
+                            <option value="" selected>Select Department</option>
+                            <option *ngFor=' let department of departmentList' [value]="department.id">
+                                {{department.departmentName}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-1" style="margin-top: 25px;" >
-              <button mat-mini-fab color="default" [disabled]="!i" class="shadow-none text-dark"
-                (click)='removeProgramme(i)'>
-                <mat-icon [ngClass]="{'text-light': !i}">remove_circle</mat-icon>
-              </button>
+            <div class="row m-0 mt-3">
+                <div class="col-md-4 mr-2 ml-3" formArrayName="programme">
+                    <div class="row" *ngFor="let programme of programmeList;index as i">
+                        <div class="col-md-10 p-0 m-0">
+                            <label class="p-0 mb-1"> Programme * </label>
+                            <input type="text" placeholder="Programme Name" required formControlName="{{i}}">
+                        </div>
+                        <div class="col-md-1" style="margin-top: 25px;">
+                            <button mat-mini-fab color="default" [disabled]="!i" class="shadow-none text-dark"
+                                (click)='removeProgramme(i)'>
+                                <mat-icon [ngClass]="{'text-light': !i}">remove_circle</mat-icon>
+                            </button>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-1" style="margin-top: 25px;" *ngIf="!isEdit">
+                    <button mat-mini-fab color="default" class="shadow-none text-success" (click)="addprogramme()">
+                        <mat-icon>add_circle</mat-icon>
+                    </button>
+                </div>
+
             </div>
-          </div>
-
-        </div>
-        <div class="col-md-1" style="margin-top: 25px;" *ngIf="!isEdit">
-          <button mat-mini-fab color="default" class="shadow-none text-success" (click)="addprogramme()">
-            <mat-icon>add_circle</mat-icon>
-          </button>
-        </div>
-
-      </div>
 
 
-      <div class="row m-0 p-2" style="margin-top: 10px;">
-        <button mat-raised-button color="primary" class="ml-2" *ngIf="!isEdit" type="submit">Save</button>
-        <button mat-raised-button color="primary" class="ml-2" *ngIf="isEdit" type="submit">Update</button>
-        <button mat-stroked-button color="warn" class="ml-3" routerLink="/programm">Cancel</button>
-      </div>
-    </form>
-  </mat-card>
+            <div class="row m-0 p-2" style="margin-top: 10px;">
+                <button mat-raised-button color="primary" class="ml-2" *ngIf="!isEdit" type="submit">Save</button>
+                <button mat-raised-button color="primary" class="ml-2" *ngIf="isEdit" type="submit">Update</button>
+                <button mat-stroked-button color="warn" class="ml-3" routerLink="/programm">Cancel</button>
+            </div>
+        </form>
+    </mat-card>
 
 
 
