--- a/src/app/modules/school/Addschool/school.component.scss
+++ b/src/app/modules/school/Addschool/school.component.scss
@@ -4,7 +4,7 @@
 
 .header_card{
     width: 100%;
-    min-height: 60px;
+    height: 60px;
     margin: 10px 0px;
 }
 
@@ -16,6 +16,18 @@
 
 input{
     width: 100%;
+    padding: 5px;
+    margin-top: 4px;
 }
-
-
+label select {
+    height: 100px;
+  }
+select{
+    width: 100%; 
+    height: 30px;
+    margin-top: 4px;
+}
+.select{
+    height:100px;
+    overflow:scroll;
+}
