--- a/src/app/modules/school/viewschool/viewschool.component.html
+++ b/src/app/modules/school/viewschool/viewschool.component.html
@@ -13,7 +13,7 @@
     <div class="row">
         <mat-card class="content_box">
             <h5 class="float-left">School</h5>
-            <button class="float-right" routerLink="/school/add" mat-raised-button color="primary"> + Add
+            <button class="float-right" (click)="gotoAdd()" mat-raised-button color="primary"> + Add
                 School</button>
             <input class="float-right search-filter" (keyup)="applyFilter($event.target.value)" placeholder="Search.. Ex: name">
             <div class="mat-elevation-z8">
