--- a/src/app/modules/semester/add-sem/add-sem.component.html
+++ b/src/app/modules/semester/add-sem/add-sem.component.html
@@ -12,7 +12,20 @@
     <mat-card class="content_box">
         <form action="" [formGroup]="objectForm" (submit)="onSubmit()">
             <div class="row m-0">
-                <div class="col-md-3 mr-2 ml-3">
+                <div class="col-md-3 mr-2 ml-3" *ngIf="isSUadmin">
+                    <div class="row" style="display: flex;">
+                        <label class="mb-0" for="cars">University</label>
+                        <select size="1" required formControlName="universityId"
+                            (ngModelChange)="selectUniversity($event)">
+                            <option value="" selected>Select University</option>
+                            <option *ngFor=' let university of universityList' [value]="university.id">
+                                {{university.universityName}}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="col-md-3 mr-2 ml-1">
                     <div class="row" style="display: flex;">
                         <label class="mb-0" for="cars">School</label>
                         <select size="1" required formControlName="schoolName" (ngModelChange)='selectSchool($event)'>
@@ -35,10 +48,9 @@
                         </select>
                     </div>
                 </div>
-
-                <div class="col-md-3 mr-2 ml-1">
+                <div class="col-md-3 mr-2 ml-1" *ngIf="!isSUadmin">
                     <div class="row" style="display: flex;">
-                        <label class="mb-0" for="cars">programme</label>
+                        <label class="mb-1" for="cars">programme</label>
                         <select size="1" required formControlName="programmeName"
                             (ngModelChange)='selectProgramme($event)'>
                             <option value="" selected>Select programme</option>
@@ -47,14 +59,32 @@
                         </select>
                     </div>
                 </div>
-
             </div>
 
-            <div class="row m-0">
-                <div class="col-md-4 mr-2" formArrayName="semester">
+            <div class="row m-0 mt-3">
+                <div class="col-md-3 mr-2 ml-3" *ngIf="isSUadmin">
+                    <div class="row" style="display: flex;">
+                        <label class="mb-1" for="cars">programme</label>
+                        <select size="1" required formControlName="programmeName"
+                            (ngModelChange)='selectProgramme($event)'>
+                            <option value="" selected>Select programme</option>
+                            <option *ngFor=' let programme of programmeList' [value]="programme.id">
+                                {{programme.programName}}</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <div class="row m-0 mt-3">
+                <div class="col-md-3 pl-1 ml-3 mr-0" formArrayName="divisionAddition" *ngIf="!isEdit">
+                    <div class="row m-0 mt-4 pt-3" *ngFor="let semester of semesterList;index as i">
+                        <mat-checkbox formControlName="{{i}}">Is No division</mat-checkbox>
+                    </div>
+                </div>
+                <div class="col-md-4 pl-1 mr-1" formArrayName="semester">
                     <div class="row m-0 mt-3" *ngFor="let semester of semesterList;index as i">
                         <div class="col-md-10 p-0 m-0">
-                            <p class="p-0 m-0 mb-2" style="line-height: 10px;"> SEMESTER * </p>
+                            <p class="p-0 m-0 mb-2" style="line-height: 10px;"> Semester * </p>
                             <input type="text" required placeholder="Semester" formControlName="{{i}}">
                         </div>
                         <div class="col-md-1" style="margin-top: 20px;">
