--- a/src/app/modules/students/students.component.html
+++ b/src/app/modules/students/students.component.html
@@ -24,28 +24,16 @@
                         <td mat-cell *matCellDef="let element;index as i"> {{i+1}} </td>
                     </ng-container>
 
-                      <ng-container matColumnDef="schoolName">
-                        <th mat-header-cell *matHeaderCellDef> School Name </th>
-                        <td mat-cell *matCellDef="let element">
-                            <a class="link" (click)="goToDepartment(element)"> {{element.schoolName}} </a>
-                        </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="departmentName">
-                        <th mat-header-cell *matHeaderCellDef> Department Name </th>
-                        <td mat-cell *matCellDef="let element">
-                            <a class="link" (click)="goToProgramName(element)"> {{element.departmentName}} </a>
-                        </td>
-                    </ng-container>
-
                     <ng-container matColumnDef="firstName">
                         <th mat-header-cell *matHeaderCellDef> First Name </th>
                         <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="lastName">
-                        <th mat-header-cell *matHeaderCellDef> Last Name </th>
-                        <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+                    <ng-container matColumnDef="rollNo">
+                        <th mat-header-cell *matHeaderCellDef> Roll No. </th>
+                        <td mat-cell *matCellDef="let element" class="text-uppercase">
+                            {{element.rollNo}}
+                        </td>
                     </ng-container>
 
                     <ng-container matColumnDef="emailId">
