--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -1,6 +1,6 @@
 <div mat-dialog-content>
     <h5 class="text-center">Confirmation</h5>
-  <p class="text-center">Are you sure! do you want to delete?</p>
+  <p class="text-center">Are you sure that you want to delete? The data will not be retrieved after deletion.</p>
 </div>
 <div mat-dialog-actions class="text-center m-auto">
   <button mat-raised-button class="m-auto" color="primary" [mat-dialog-close]="false">No</button>
