--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,20 +7,65 @@
             <mat-icon (click)="goToHome()">home</mat-icon>
         </button>
     </span>
+    
     <span>
+        <button mat-button [matMenuTriggerFor]="beforeMenu" *ngIf="notifictionsList.length==0 && isAdminUser"><mat-icon>notifications</mat-icon></button>
+        <button mat-button [matMenuTriggerFor]="beforeMenu" matBadge="{{notifictionsList.length}}" *ngIf="notifictionsList.length!=0 && isAdminUser"><mat-icon>notifications</mat-icon></button>
         <ngx-avatar [bgColor]="'#ffffff'" [fgColor]="'#000000'" [name]="userDetails['userName']"></ngx-avatar>
+        <!-- <button class="ml-1 mt-2" [matMenuTriggerFor]="notify" mat-icon-button matBadge="17"><mat-icon>notifications</mat-icon></button> -->
+
+        <mat-menu #beforeMenu="matMenu" xPosition="before">
+            <div *ngIf="notifictionsList.length==0">
+                <div style="padding: 10px;">
+                    <label style="font-size: 18px;">Notifications</label>
+                    <hr style="margin: 0;">
+                </div>
+                <div style="padding: 0px 8px;">
+                    <div style="padding: 5px;">
+                        <img src="assets/notify.png" style="width: 200px;height: 200px;" />
+                    </div>
+                </div>
+                <div style="text-align: center;">
+                    <label style="font-size: 18px;text-align: center;">No New Notification</label>
+                </div>
+            </div>
+            <div *ngIf="notifictionsList.length!=0">
+                <div style="padding: 10px;">
+                    <label style="font-size: 18px;">Notifications</label>
+                    <hr style="margin: 0;">
+                </div>
+                <div style="max-height: 300px;" *ngIf="notifictionsList.length<4">
+                    <div style="display: flex;align-self: center;flex-direction: row;padding: 0px 8px;" *ngFor='let notify of notifictionsList'>
+                        <div style="padding: 5px;">
+                            <label style="font-size: 18px;text-shadow: none;">{{notify.title}}</label>
+                            <br>
+                            <p style="font-size: 12px;color: #666; width: 150px;">{{notify.description}}</p>
+                        </div>
+                        <div style="align-self: center;display: inherit;">
+                            <button mat-button class="icon-notify" routerLink="/active-fee" style="background-color: #9c27b0;"><mat-icon style="font-size: 18px;margin-top: 7px;">remove_red_eye</mat-icon></button>
+                            <button mat-button class="icon-notify" (click)="openActiveFee(notify)" style="background-color: #4680ff;"><mat-icon style="font-size: 18px;margin-top: 7px;">check</mat-icon></button>
+                        </div>
+                    </div>
+                </div>
+                <div style="max-height: 300px;overflow-y: scroll;" *ngIf="notifictionsList.length>3">
+                    <div style="display: flex;align-self: center;flex-direction: row;padding: 0px 8px;" *ngFor='let notify of notifictionsList'>
+                        <div style="padding: 5px;">
+                            <label style="font-size: 18px;text-shadow: none;">{{notify.title}}</label>
+                            <br>
+                            <p style="font-size: 12px;color: #666; width: 150px;">{{notify.description}}</p>
+                        </div>
+                        <div style="align-self: center;display: inherit;">
+                            <button mat-button class="icon-notify" routerLink="/active-fee" style="background-color: #9c27b0;"><mat-icon style="font-size: 18px;margin-top: 7px;">remove_red_eye</mat-icon></button>
+                            <button mat-button class="icon-notify" (click)="openActiveFee(notify)" style="background-color: #4680ff;"><mat-icon style="font-size: 18px;margin-top: 7px;">check</mat-icon></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </mat-menu>
         <button class="ml-1 mt-2" mat-icon-button [matMenuTriggerFor]="menu"><mat-icon>keyboard_arrow_down</mat-icon></button>
         <mat-menu #menu="matMenu">
-            <!-- <div mat-ripple mat-menu-item routerLink="/profile" routerLinkActive="active">
-                <mat-icon>person</mat-icon> Profile
-            </div> -->
-            <div mat-ripple mat-menu-item routerLink="/change-password" routerLinkActive="active">
-                <mat-icon>edit</mat-icon> Change Password
-            </div>
-            <mat-divider></mat-divider>
-            <div mat-ripple mat-menu-item (click)="logOut()">
-                <mat-icon>logout</mat-icon> Logout
-            </div>
+            <button mat-menu-item (click)="goToChangePassword()">Change Password</button>
+            <button mat-menu-item (click)="logOut()">Logout</button>
         </mat-menu>
     </span>
 </mat-toolbar>
