--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>Admin Panel</mat-card-title>
-      <mat-card-subtitle>Welcome {{userDetails['userName']}}</mat-card-subtitle>
+      <mat-card-subtitle>Welcome {{userDetails['name']}}</mat-card-subtitle>
     </mat-card-header>
 
     <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
